--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                     </div>
                     <img src="https://media.contentapi.ea.com/content/dam/ea/walrus/characters/luke/game-object/hub-luke-skywalker-xlg.jpg" alt="Luke Skywalker">
                     <div class="cardWrap">
-                        <div id="lukeAtk" class="glyphicon glyphicon-flash"></div>
-                        <div id="lukeHealth" class="glyphicon glyphicon-heart"></div>
+                        <div id="lukeAtk" class="glyphicon glyphicon-flash attack"></div>
+                        <div id="lukeHealth" class="glyphicon glyphicon-heart health"></div>
                     </div>
                 </div>
             </div>
@@ -44,8 +44,8 @@
                     </div>
                     <img src="https://media.contentapi.ea.com/content/dam/ea/walrus/characters/darth-vader/game-object/hub-darth-vader-xlg.jpg" alt="Darth Vader">
                     <div class="cardWrap">
-                        <div id="vaderAtk" class="glyphicon glyphicon-flash"></div>
-                        <div id="vaderHealth" class="glyphicon glyphicon-heart"></div>
+                        <div id="vaderAtk" class="glyphicon glyphicon-flash attack"></div>
+                        <div id="vaderHealth" class="glyphicon glyphicon-heart health"></div>
                     </div>
                 </div>
             </div>
@@ -56,8 +56,8 @@
                     </div>
                     <img src="https://media.contentapi.ea.com/content/dam/ea/walrus/characters/han-solo/game-object/hub-han-solo-xlg.jpg" alt="Han Solo">
                     <div class="cardWrap">
-                        <div id="hanAtk" class="glyphicon glyphicon-flash"></div>
-                        <div id="hanHealth" class="glyphicon glyphicon-heart"></div>
+                        <div id="hanAtk" class="glyphicon glyphicon-flash attack"></div>
+                        <div id="hanHealth" class="glyphicon glyphicon-heart health"></div>
                     </div>
                 </div>
             </div>
@@ -68,8 +68,8 @@
                     </div>
                     <img src="https://media.contentapi.ea.com/content/dam/ea/walrus/characters/boba-fett/game-object/hub-boba-fett-xlg.jpg" alt="Boba Fett">
                     <div class="cardWrap">
-                        <div id="bobaAtk" class="glyphicon glyphicon-flash">bobaFett.attack</div>
-                        <div id="bobaHealth" class="glyphicon glyphicon-heart">bobaFett.health</div>
+                        <div id="bobaAtk" class="glyphicon glyphicon-flash attack"></div>
+                        <div id="bobaHealth" class="glyphicon glyphicon-heart health"></div>
                     </div>
                 </div>
             </div>
