finished font colors

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid blueColor">
         <h1 class="title">Star Wars RPG</h1>
         <h2 class="title">Choose Your Own Fate</h2>
         <p id="reset">
@@ -28,7 +28,7 @@
         <br>
         <div class="row">
             <div id="placeLuke" class="col-md-3">
-                <div id="luke" class="card">
+                <div id="luke" class="card purpleColor">
                     <div class="cardWrap">
                         <h4><strong>Luke Skywalker<strong></h4>
                     </div>
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <div id="placeVader" class="col-md-3">
-                <div id="vader" class="card">
+                <div id="vader" class="card purpleColor">
                     <div class="cardWrap">
                         <h4><strong>Dark Vader<strong></h4>
                     </div>
@@ -52,7 +52,7 @@
                 </div>
             </div>
             <div id="placeHan" class="col-md-3">
-                <div id="han" class="card">
+                <div id="han" class="card purpleColor">
                     <div class="cardWrap">
                         <h4><strong>Han Solo<strong></h4>
                     </div>
@@ -64,7 +64,7 @@
                 </div>
             </div>
             <div id="placeBoba" class="col-md-3">
-                <div id="boba" class="card">
+                <div id="boba" class="card purpleColor">
                     <div class="cardWrap">
                         <h4><strong>Boba Fett<strong></h4>
                     </div>
