--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <div class="cardWrap">
                         <h4><strong>Luke Skywalker<strong></h4>
                     </div>
-                    <img src="https://media.contentapi.ea.com/content/dam/ea/walrus/characters/luke/game-object/hub-luke-skywalker-xlg.jpg" alt="Luke Skywalker">
+                    <img src="assets/images/lukePicture.png" alt="Luke Skywalker">
                     <div class="cardWrap">
                         <div id="lukeAtk" class="glyphicon glyphicon-flash attack"></div>
                         <div id="lukeHealth" class="glyphicon glyphicon-heart health"></div>
@@ -44,7 +44,7 @@
                     <div class="cardWrap">
                         <h4><strong>Dark Vader<strong></h4>
                     </div>
-                    <img src="https://media.contentapi.ea.com/content/dam/ea/walrus/characters/darth-vader/game-object/hub-darth-vader-xlg.jpg" alt="Darth Vader">
+                    <img src="assets/images/vaderPicture.png" alt="Darth Vader">
                     <div class="cardWrap">
                         <div id="vaderAtk" class="glyphicon glyphicon-flash attack"></div>
                         <div id="vaderHealth" class="glyphicon glyphicon-heart health"></div>
@@ -56,7 +56,7 @@
                     <div class="cardWrap">
                         <h4><strong>Han Solo<strong></h4>
                     </div>
-                    <img src="https://media.contentapi.ea.com/content/dam/ea/walrus/characters/han-solo/game-object/hub-han-solo-xlg.jpg" alt="Han Solo">
+                    <img src="assets/images/hanPicture.png" alt="Han Solo">
                     <div class="cardWrap">
                         <div id="hanAtk" class="glyphicon glyphicon-flash attack"></div>
                         <div id="hanHealth" class="glyphicon glyphicon-heart health"></div>
@@ -68,7 +68,7 @@
                     <div class="cardWrap">
                         <h4><strong>Boba Fett<strong></h4>
                     </div>
-                    <img src="https://media.contentapi.ea.com/content/dam/ea/walrus/characters/boba-fett/game-object/hub-boba-fett-xlg.jpg" alt="Boba Fett">
+                    <img src="assets/images/bobaPicture.png" alt="Boba Fett">
                     <div class="cardWrap">
                         <div id="bobaAtk" class="glyphicon glyphicon-flash attack"></div>
                         <div id="bobaHealth" class="glyphicon glyphicon-heart health"></div>
