--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <h3 id="activeHero">Your Active Fighter:</h3>
             </div>
             <div class="col-md-4">
-                <h3 class="fightDivide">VS</h3>
+                <h3 class="fightDivide">versus</h3>
                 <button class="btn btn-danger btn-block" id="atkBtn">Attack</button>
             </div>
             <div class="col-md-4">
